--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 ---
-layout: post
+layout: page
 title: Mihir Aranala
 subtitle: Transit planner with a quest for data
-cover-img: https://media.licdn.com/dms/image/v2/C5616AQGUuNytPH_AGg/profile-displaybackgroundimage-shrink_350_1400/profile-displaybackgroundimage-shrink_350_1400/0/1656137812224?e=1744243200&v=beta&t=VE8JVICcQBVtUgVywaP5OjmKDshA5EtEeMp-0q5iNmc
-thumbnail-img: https://media.licdn.com/dms/image/v2/D5603AQGp3lUMulrsWA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1677116826961?e=1744243200&v=beta&t=dJv-le7aqhl6R3cqkNrbvH2gxUAMpqG2alxl8_g-S0E
 ---
 
-Under what circumstances should we step off a path? When is it essential that we finish what we start? If I bought a bag of peanuts and had an allergic reaction, no one would fault me if I threw it out. If I ended a relationship with a woman who hit me, no one would say that I had a commitment problem. But if I walk away from a seemingly secure route because my soul has other ideas, I am a flake?
+My name is Mihir Sriram Aranala. I am an architect and an urban planner by profession. Currently pursuing an MBA.
 
-The truth is that no one else can definitively know the path we are here to walk. It’s tempting to listen—many of us long for the omnipotent other—but unless they are genuine psychic intuitives, they can’t know. All others can know is their own truth, and if they’ve actually done the work to excavate it, they will have the good sense to know that they cannot genuinely know anyone else’s. Only soul knows the path it is here to walk. Since you are the only one living in your temple, only you can know its scriptures and interpretive structure.
 
-At the heart of the struggle are two very different ideas of success—survival-driven and soul-driven. For survivalists, success is security, pragmatism, power over others. Success is the absence of material suffering, the nourishing of the soul be damned. It is an odd and ironic thing that most of the material power in our world often resides in the hands of younger souls. Still working in the egoic and material realms, they love the sensations of power and focus most of their energy on accumulation. Older souls tend not to be as materially driven. They have already played the worldly game in previous lives and they search for more subtle shades of meaning in this one—authentication rather than accumulation. They are often ignored by the culture at large, although they really are the truest warriors.
-
-A soulful notion of success rests on the actualization of our innate image. Success is simply the completion of a soul step, however unsightly it may be. We have finished what we started when the lesson is learned. What a fear-based culture calls a wonderful opportunity may be fruitless and misguided for the soul. Staying in a passionless relationship may satisfy our need for comfort, but it may stifle the soul. Becoming a famous lawyer is only worthwhile if the soul demands it. It is an essential failure if you are called to be a monastic this time around. If you need to explore and abandon ten careers in order to stretch your soul toward its innate image, then so be it. Flake it till you make it.
+- I am a Transportation Planner at AECOM.
+- My experience lies in data and spatial analysis, mapping, systems analysis, service and operations planning, and the use of various innovative tools.
+- I assist in transit, microtransit, BRT, and bike planning through data, spatial analysis and report writing.
+- I hold a Bachelor's degree in Architecture from Manipal Academy of Higher Education, India.
+- I spent a semester in Umea, Sweden learning about Swedish architecture, urban design, and housing.
+- I graduate from Arizona State University with a Masters' degree in Urban and Environmental Planning in May 2023.
+- 👀 I’m interested in the intersection of Transport (Rail and Transit) and urban data.
+- 🌱 I’m currently learning Spatial Data Science and Hadoop.
+- 📫 Email me at sriram.mihir@gmail.com
